Cleaning some performance bugs reported by FindBugs